# rccl

./: .gitmodules  CMakeLists.txt  build_lib.sh  package.xml
lib/: libvsomeip3-e2e.so.3.4.10
src/: RcclTestClient.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src-gen/v1/rccltest/: RcclTest.hpp  RcclTestProxy.hpp  RcclTestProxyBase.hpp  RcclTestSomeIPCatalog.json  RcclTestSomeIPDeployment.cpp  RcclTestSomeIPDeployment.hpp  RcclTestSomeIPProxy.cpp  RcclTestSomeIPProxy.hpp  RcclTestSomeIPStubAdapter.cpp  RcclTestSomeIPStubAdapter.hpp  RcclTestStub.hpp  RcclTestStubDefault.hpp
